# cppnd-capstone-snake-game

./: .gitignore  CMakeLists.txt  README.md  notes.md
assets/: .scores.txt  rotate_hawks.sh  scores.txt
maps/: pacman.txt
src/: character.h  constants.h  food.cpp  food.h  game.cpp  game.h  main.cpp  mcomponents.cpp  mcomponents.h  menu.cpp  menu.h  queue.h  renderer.cpp  renderer.h  scoreio.cpp  scoreio.h  snake.cpp  snake.h  utils.h
src/ai/: planner.cpp  planner.h  run.cpp  run.h
src/enemy/: planner.cpp  planner.h
src/menu/: components.cpp  components.h  menu.cpp  menu.h
src/scratch/: food.cpp
